--- a/HTML/Macro_3106_Q3_2024.html
+++ b/HTML/Macro_3106_Q3_2024.html
@@ -43,13 +43,18 @@
   </style>
   <table>
     <tr>
-      <th rowspan='2' id='col1'>[cell1]</th>
-      [header1]
+      <th rowspan='2' id='col1'>Micro de Residência / Município de Ocorrência</th>
+      <th colspan='2'>312770 Governador Valadares</th><th colspan='2'>Demais municípios da Macro Leste</th><th colspan='2'>Demais municípios de outras Macros</th><th colspan='2'>Total</th>
     </tr>
     <tr>
-    [header2]
+    <th>05/24-08/24</th><th>09/24-12/24</th><th>05/24-08/24</th><th>09/24-12/24</th><th>05/24-08/24</th><th>09/24-12/24</th><th>05/24-08/24</th><th>09/24-12/24</th>
     </tr>
-    [table]
+    <tr><td id='col1'>31036 Governador Valadares</td><td>2315</td><td>1845</td><td>84</td><td>85</td><td>146</td><td>185</td><td>2545</td><td>2115</td></tr>
+<tr><td id='col1'>31038 Mantena</td><td>138</td><td>139</td><td>57</td><td>51</td><td>32</td><td>37</td><td>227</td><td>227</td></tr>
+<tr><td id='col1'>31040 Resplendor</td><td>154</td><td>135</td><td>76</td><td>77</td><td>48</td><td>50</td><td>278</td><td>262</td></tr>
+<tr><td id='col1'>31080 Pecanha/São João Evangelista</td><td>90</td><td>77</td><td>61</td><td>95</td><td>87</td><td>121</td><td>238</td><td>293</td></tr>
+<tr><td id='col1'>Total</td><td>2697</td><td>2196</td><td>278</td><td>308</td><td>313</td><td>393</td><td>3288</td><td>2897</td></tr>
+
   </table>
 
 </body>
