--- a/HTML/Macro_3102_Q3_2024.html
+++ b/HTML/Macro_3102_Q3_2024.html
@@ -43,13 +43,18 @@
   </style>
   <table>
     <tr>
-      <th rowspan='2' id='col1'>[cell1]</th>
-      [header1]
+      <th rowspan='2' id='col1'>Micro de Residência / Município de Ocorrência</th>
+      <th colspan='2'>310560 Barbacena</th><th colspan='2'>Demais municípios da Macro Centro Sul</th><th colspan='2'>Demais municípios de outras Macros</th><th colspan='2'>Total</th>
     </tr>
     <tr>
-    [header2]
+    <th>05/24-08/24</th><th>09/24-12/24</th><th>05/24-08/24</th><th>09/24-12/24</th><th>05/24-08/24</th><th>09/24-12/24</th><th>05/24-08/24</th><th>09/24-12/24</th>
     </tr>
-    [table]
+    <tr><td id='col1'>31013 Barbacena</td><td>960</td><td>932</td><td>78</td><td>107</td><td>195</td><td>221</td><td>1233</td><td>1260</td></tr>
+<tr><td id='col1'>31015 São João Del Rei</td><td>238</td><td>209</td><td>764</td><td>816</td><td>243</td><td>281</td><td>1245</td><td>1306</td></tr>
+<tr><td id='col1'>31078 Congonhas</td><td>101</td><td>125</td><td>74</td><td>115</td><td>199</td><td>222</td><td>374</td><td>462</td></tr>
+<tr><td id='col1'>31079 Conselheiro Lafaiete</td><td>226</td><td>228</td><td>171</td><td>185</td><td>239</td><td>202</td><td>636</td><td>615</td></tr>
+<tr><td id='col1'>Total</td><td>1525</td><td>1494</td><td>1087</td><td>1223</td><td>876</td><td>926</td><td>3488</td><td>3643</td></tr>
+
   </table>
 
 </body>
