--- a/HTML/Macro_3110_Q3_2024.html
+++ b/HTML/Macro_3110_Q3_2024.html
@@ -43,13 +43,17 @@
   </style>
   <table>
     <tr>
-      <th rowspan='2' id='col1'>[cell1]</th>
-      [header1]
+      <th rowspan='2' id='col1'>Micro de Residência / Município de Ocorrência</th>
+      <th colspan='2'>313940 Manhuaçu</th><th colspan='2'>315210 Ponte Nova</th><th colspan='2'>Demais municípios da Macro Leste do Sul</th><th colspan='2'>Demais municípios de outras Macros</th><th colspan='2'>Total</th>
     </tr>
     <tr>
-    [header2]
+    <th>05/24-08/24</th><th>09/24-12/24</th><th>05/24-08/24</th><th>09/24-12/24</th><th>05/24-08/24</th><th>09/24-12/24</th><th>05/24-08/24</th><th>09/24-12/24</th><th>05/24-08/24</th><th>09/24-12/24</th>
     </tr>
-    [table]
+    <tr><td id='col1'>31059 Manhuaçu</td><td>936</td><td>1003</td><td>45</td><td>90</td><td>117</td><td>184</td><td>854</td><td>827</td><td>1952</td><td>2104</td></tr>
+<tr><td id='col1'>31060 Ponte Nova</td><td>0</td><td>1</td><td>568</td><td>733</td><td>46</td><td>26</td><td>163</td><td>159</td><td>777</td><td>919</td></tr>
+<tr><td id='col1'>31061 Vicosa</td><td>0</td><td>0</td><td>118</td><td>231</td><td>200</td><td>223</td><td>103</td><td>103</td><td>421</td><td>557</td></tr>
+<tr><td id='col1'>Total</td><td>936</td><td>1004</td><td>731</td><td>1054</td><td>363</td><td>433</td><td>1120</td><td>1089</td><td>3150</td><td>3580</td></tr>
+
   </table>
 
 </body>
