--- a/HTML/Micro_31012_Q1_2024.html
+++ b/HTML/Micro_31012_Q1_2024.html
@@ -16,12 +16,13 @@
     <tr>
     <th>09/23-12/23</th><th>01/24-04/24</th><th>09/23-12/23</th><th>01/24-04/24</th><th>09/23-12/23</th><th>01/24-04/24</th><th>09/23-12/23</th><th>01/24-04/24</th>
     </tr>
-    <tr><td id='col1'>311900 Cordislândia</td><td>20</td><td>23</td><td>28</td><td>17</td><td>9</td><td>10</td><td>57</td><td>50</td></tr>
+    <tr><td id='col1'>311090 Campanha</td><td>13</td><td>16</td><td>85</td><td>68</td><td>91</td><td>104</td><td>189</td><td>188</td></tr>
+<tr><td id='col1'>311900 Cordislândia</td><td>20</td><td>23</td><td>28</td><td>17</td><td>9</td><td>10</td><td>57</td><td>50</td></tr>
 <tr><td id='col1'>312360 Elói Mendes</td><td>57</td><td>45</td><td>277</td><td>255</td><td>49</td><td>43</td><td>383</td><td>343</td></tr>
 <tr><td id='col1'>314260 Monsenhor Paulo</td><td>42</td><td>39</td><td>65</td><td>39</td><td>9</td><td>9</td><td>116</td><td>87</td></tr>
 <tr><td id='col1'>316200 São Gonçalo Do Sapucaí</td><td>66</td><td>45</td><td>368</td><td>313</td><td>44</td><td>50</td><td>478</td><td>408</td></tr>
 <tr><td id='col1'>317070 Varginha</td><td>994</td><td>1067</td><td>7</td><td>37</td><td>61</td><td>54</td><td>1062</td><td>1158</td></tr>
-<tr><td id='col1'>Total</td><td>1179</td><td>1219</td><td>745</td><td>661</td><td>172</td><td>166</td><td>2096</td><td>2046</td></tr>
+<tr><td id='col1'>Total</td><td>1192</td><td>1235</td><td>830</td><td>729</td><td>263</td><td>270</td><td>2285</td><td>2234</td></tr>
 
   </table>
 
