--- a/HTML/Micro_31012_Q2_2024.html
+++ b/HTML/Micro_31012_Q2_2024.html
@@ -16,12 +16,13 @@
     <tr>
     <th>01/24-04/24</th><th>05/24-08/24</th><th>01/24-04/24</th><th>05/24-08/24</th><th>01/24-04/24</th><th>05/24-08/24</th><th>01/24-04/24</th><th>05/24-08/24</th>
     </tr>
-    <tr><td id='col1'>311900 Cordislândia</td><td>23</td><td>9</td><td>17</td><td>10</td><td>10</td><td>8</td><td>50</td><td>27</td></tr>
+    <tr><td id='col1'>311090 Campanha</td><td>16</td><td>34</td><td>68</td><td>55</td><td>104</td><td>91</td><td>188</td><td>180</td></tr>
+<tr><td id='col1'>311900 Cordislândia</td><td>23</td><td>9</td><td>17</td><td>10</td><td>10</td><td>8</td><td>50</td><td>27</td></tr>
 <tr><td id='col1'>312360 Elói Mendes</td><td>45</td><td>84</td><td>255</td><td>253</td><td>43</td><td>39</td><td>343</td><td>376</td></tr>
 <tr><td id='col1'>314260 Monsenhor Paulo</td><td>39</td><td>37</td><td>39</td><td>49</td><td>9</td><td>11</td><td>87</td><td>97</td></tr>
 <tr><td id='col1'>316200 São Gonçalo Do Sapucaí</td><td>45</td><td>59</td><td>313</td><td>198</td><td>50</td><td>70</td><td>408</td><td>327</td></tr>
 <tr><td id='col1'>317070 Varginha</td><td>1067</td><td>1251</td><td>37</td><td>82</td><td>54</td><td>46</td><td>1158</td><td>1379</td></tr>
-<tr><td id='col1'>Total</td><td>1219</td><td>1440</td><td>661</td><td>592</td><td>166</td><td>174</td><td>2046</td><td>2206</td></tr>
+<tr><td id='col1'>Total</td><td>1235</td><td>1474</td><td>729</td><td>647</td><td>270</td><td>265</td><td>2234</td><td>2386</td></tr>
 
   </table>
 
