--- a/HTML/Micro_31036_Q1_2025.html
+++ b/HTML/Micro_31036_Q1_2025.html
@@ -17,6 +17,7 @@
     <th>09/24-12/24</th><th>01/25-04/25</th><th>09/24-12/24</th><th>01/25-04/25</th><th>09/24-12/24</th><th>01/25-04/25</th><th>09/24-12/24</th><th>01/25-04/25</th>
     </tr>
     <tr><td id='col1'>310180 Alpercata</td><td>46</td><td>33</td><td>20</td><td>6</td><td>12</td><td>17</td><td>78</td><td>56</td></tr>
+<tr><td id='col1'>310220 Alvarenga</td><td>13</td><td>14</td><td>21</td><td>14</td><td>17</td><td>20</td><td>51</td><td>48</td></tr>
 <tr><td id='col1'>311265 Capitão Andrade</td><td>28</td><td>20</td><td>25</td><td>15</td><td>12</td><td>6</td><td>65</td><td>41</td></tr>
 <tr><td id='col1'>311920 Coroaci</td><td>50</td><td>30</td><td>9</td><td>4</td><td>11</td><td>5</td><td>70</td><td>39</td></tr>
 <tr><td id='col1'>312220 Divinolândia De Minas</td><td>29</td><td>25</td><td>0</td><td>0</td><td>93</td><td>58</td><td>122</td><td>83</td></tr>
@@ -40,7 +41,7 @@
 <tr><td id='col1'>316950 Tumiritinga</td><td>19</td><td>29</td><td>18</td><td>19</td><td>6</td><td>3</td><td>43</td><td>51</td></tr>
 <tr><td id='col1'>317150 Mathias Lobato</td><td>20</td><td>11</td><td>8</td><td>1</td><td>8</td><td>14</td><td>36</td><td>26</td></tr>
 <tr><td id='col1'>317190 Virgolândia</td><td>21</td><td>20</td><td>0</td><td>0</td><td>15</td><td>32</td><td>36</td><td>52</td></tr>
-<tr><td id='col1'>Total</td><td>2968</td><td>3703</td><td>526</td><td>499</td><td>563</td><td>609</td><td>4057</td><td>4811</td></tr>
+<tr><td id='col1'>Total</td><td>2981</td><td>3717</td><td>547</td><td>513</td><td>580</td><td>629</td><td>4108</td><td>4859</td></tr>
 
   </table>
 
