--- a/HTML/Micro_31012_Q1_2025.html
+++ b/HTML/Micro_31012_Q1_2025.html
@@ -16,12 +16,13 @@
     <tr>
     <th>09/24-12/24</th><th>01/25-04/25</th><th>09/24-12/24</th><th>01/25-04/25</th><th>09/24-12/24</th><th>01/25-04/25</th><th>09/24-12/24</th><th>01/25-04/25</th>
     </tr>
-    <tr><td id='col1'>311900 Cordislândia</td><td>5</td><td>12</td><td>26</td><td>14</td><td>9</td><td>14</td><td>40</td><td>40</td></tr>
+    <tr><td id='col1'>311090 Campanha</td><td>29</td><td>25</td><td>49</td><td>45</td><td>90</td><td>65</td><td>168</td><td>135</td></tr>
+<tr><td id='col1'>311900 Cordislândia</td><td>5</td><td>12</td><td>26</td><td>14</td><td>9</td><td>14</td><td>40</td><td>40</td></tr>
 <tr><td id='col1'>312360 Elói Mendes</td><td>82</td><td>69</td><td>256</td><td>218</td><td>39</td><td>32</td><td>377</td><td>319</td></tr>
 <tr><td id='col1'>314260 Monsenhor Paulo</td><td>36</td><td>34</td><td>63</td><td>58</td><td>21</td><td>10</td><td>120</td><td>102</td></tr>
 <tr><td id='col1'>316200 São Gonçalo Do Sapucaí</td><td>57</td><td>58</td><td>273</td><td>162</td><td>57</td><td>32</td><td>387</td><td>252</td></tr>
 <tr><td id='col1'>317070 Varginha</td><td>1291</td><td>1177</td><td>70</td><td>73</td><td>53</td><td>63</td><td>1414</td><td>1313</td></tr>
-<tr><td id='col1'>Total</td><td>1471</td><td>1350</td><td>688</td><td>525</td><td>179</td><td>151</td><td>2338</td><td>2026</td></tr>
+<tr><td id='col1'>Total</td><td>1500</td><td>1375</td><td>737</td><td>570</td><td>269</td><td>216</td><td>2506</td><td>2161</td></tr>
 
   </table>
 
