--- a/HTML/Micro_31012_Q3_2023.html
+++ b/HTML/Micro_31012_Q3_2023.html
@@ -16,12 +16,13 @@
     <tr>
     <th>05/23-09/23</th><th>09/23-12/23</th><th>05/23-09/23</th><th>09/23-12/23</th><th>05/23-09/23</th><th>09/23-12/23</th><th>05/23-09/23</th><th>09/23-12/23</th>
     </tr>
-    <tr><td id='col1'>311900 Cordislândia</td><td>18</td><td>20</td><td>27</td><td>28</td><td>9</td><td>9</td><td>54</td><td>57</td></tr>
+    <tr><td id='col1'>311090 Campanha</td><td>34</td><td>13</td><td>46</td><td>85</td><td>121</td><td>91</td><td>201</td><td>189</td></tr>
+<tr><td id='col1'>311900 Cordislândia</td><td>18</td><td>20</td><td>27</td><td>28</td><td>9</td><td>9</td><td>54</td><td>57</td></tr>
 <tr><td id='col1'>312360 Elói Mendes</td><td>51</td><td>57</td><td>243</td><td>277</td><td>49</td><td>49</td><td>343</td><td>383</td></tr>
 <tr><td id='col1'>314260 Monsenhor Paulo</td><td>28</td><td>42</td><td>44</td><td>65</td><td>3</td><td>9</td><td>75</td><td>116</td></tr>
 <tr><td id='col1'>316200 São Gonçalo Do Sapucaí</td><td>86</td><td>66</td><td>286</td><td>368</td><td>58</td><td>44</td><td>430</td><td>478</td></tr>
 <tr><td id='col1'>317070 Varginha</td><td>1291</td><td>994</td><td>4</td><td>7</td><td>74</td><td>61</td><td>1369</td><td>1062</td></tr>
-<tr><td id='col1'>Total</td><td>1474</td><td>1179</td><td>604</td><td>745</td><td>193</td><td>172</td><td>2271</td><td>2096</td></tr>
+<tr><td id='col1'>Total</td><td>1508</td><td>1192</td><td>650</td><td>830</td><td>314</td><td>263</td><td>2472</td><td>2285</td></tr>
 
   </table>
 
