--- a/HTML/Micro_31036_Q1_2024.html
+++ b/HTML/Micro_31036_Q1_2024.html
@@ -17,6 +17,7 @@
     <th>09/23-12/23</th><th>01/24-04/24</th><th>09/23-12/23</th><th>01/24-04/24</th><th>09/23-12/23</th><th>01/24-04/24</th><th>09/23-12/23</th><th>01/24-04/24</th>
     </tr>
     <tr><td id='col1'>310180 Alpercata</td><td>37</td><td>33</td><td>13</td><td>13</td><td>8</td><td>7</td><td>58</td><td>53</td></tr>
+<tr><td id='col1'>310220 Alvarenga</td><td>10</td><td>12</td><td>15</td><td>13</td><td>34</td><td>17</td><td>59</td><td>42</td></tr>
 <tr><td id='col1'>311265 Capitão Andrade</td><td>26</td><td>17</td><td>25</td><td>13</td><td>3</td><td>0</td><td>54</td><td>30</td></tr>
 <tr><td id='col1'>311920 Coroaci</td><td>39</td><td>42</td><td>13</td><td>15</td><td>13</td><td>12</td><td>65</td><td>69</td></tr>
 <tr><td id='col1'>312220 Divinolândia De Minas</td><td>22</td><td>23</td><td>0</td><td>0</td><td>66</td><td>62</td><td>88</td><td>85</td></tr>
@@ -40,7 +41,7 @@
 <tr><td id='col1'>316950 Tumiritinga</td><td>39</td><td>35</td><td>11</td><td>10</td><td>3</td><td>4</td><td>53</td><td>49</td></tr>
 <tr><td id='col1'>317150 Mathias Lobato</td><td>14</td><td>22</td><td>8</td><td>12</td><td>5</td><td>9</td><td>27</td><td>43</td></tr>
 <tr><td id='col1'>317190 Virgolândia</td><td>19</td><td>22</td><td>0</td><td>2</td><td>30</td><td>31</td><td>49</td><td>55</td></tr>
-<tr><td id='col1'>Total</td><td>2933</td><td>3555</td><td>579</td><td>428</td><td>528</td><td>518</td><td>4040</td><td>4501</td></tr>
+<tr><td id='col1'>Total</td><td>2943</td><td>3567</td><td>594</td><td>441</td><td>562</td><td>535</td><td>4099</td><td>4543</td></tr>
 
   </table>
 
