--- a/HTML/Micro_31036_Q2_2023.html
+++ b/HTML/Micro_31036_Q2_2023.html
@@ -17,6 +17,7 @@
     <th>01/23-04/23</th><th>05/23-08/23</th><th>01/23-04/23</th><th>05/23-08/23</th><th>01/23-04/23</th><th>05/23-08/23</th><th>01/23-04/23</th><th>05/23-08/23</th>
     </tr>
     <tr><td id='col1'>310180 Alpercata</td><td>54</td><td>63</td><td>5</td><td>18</td><td>13</td><td>10</td><td>72</td><td>91</td></tr>
+<tr><td id='col1'>310220 Alvarenga</td><td>11</td><td>10</td><td>4</td><td>18</td><td>32</td><td>25</td><td>47</td><td>53</td></tr>
 <tr><td id='col1'>311265 Capitão Andrade</td><td>29</td><td>37</td><td>19</td><td>15</td><td>7</td><td>4</td><td>55</td><td>56</td></tr>
 <tr><td id='col1'>311920 Coroaci</td><td>29</td><td>56</td><td>10</td><td>18</td><td>5</td><td>6</td><td>44</td><td>80</td></tr>
 <tr><td id='col1'>312220 Divinolândia De Minas</td><td>11</td><td>29</td><td>0</td><td>1</td><td>39</td><td>105</td><td>50</td><td>135</td></tr>
@@ -40,7 +41,7 @@
 <tr><td id='col1'>316950 Tumiritinga</td><td>41</td><td>47</td><td>7</td><td>10</td><td>6</td><td>6</td><td>54</td><td>63</td></tr>
 <tr><td id='col1'>317150 Mathias Lobato</td><td>22</td><td>29</td><td>1</td><td>5</td><td>2</td><td>4</td><td>25</td><td>38</td></tr>
 <tr><td id='col1'>317190 Virgolândia</td><td>23</td><td>32</td><td>0</td><td>1</td><td>28</td><td>33</td><td>51</td><td>66</td></tr>
-<tr><td id='col1'>Total</td><td>3019</td><td>3787</td><td>504</td><td>563</td><td>350</td><td>495</td><td>3873</td><td>4845</td></tr>
+<tr><td id='col1'>Total</td><td>3030</td><td>3797</td><td>508</td><td>581</td><td>382</td><td>520</td><td>3920</td><td>4898</td></tr>
 
   </table>
 
