--- a/HTML/Micro_31036_Q2_2024.html
+++ b/HTML/Micro_31036_Q2_2024.html
@@ -17,6 +17,7 @@
     <th>01/24-04/24</th><th>05/24-08/24</th><th>01/24-04/24</th><th>05/24-08/24</th><th>01/24-04/24</th><th>05/24-08/24</th><th>01/24-04/24</th><th>05/24-08/24</th>
     </tr>
     <tr><td id='col1'>310180 Alpercata</td><td>33</td><td>42</td><td>13</td><td>23</td><td>7</td><td>12</td><td>53</td><td>77</td></tr>
+<tr><td id='col1'>310220 Alvarenga</td><td>12</td><td>24</td><td>13</td><td>18</td><td>17</td><td>14</td><td>42</td><td>56</td></tr>
 <tr><td id='col1'>311265 Capitão Andrade</td><td>17</td><td>32</td><td>13</td><td>33</td><td>0</td><td>1</td><td>30</td><td>66</td></tr>
 <tr><td id='col1'>311920 Coroaci</td><td>42</td><td>50</td><td>15</td><td>10</td><td>12</td><td>4</td><td>69</td><td>64</td></tr>
 <tr><td id='col1'>312220 Divinolândia De Minas</td><td>23</td><td>24</td><td>0</td><td>0</td><td>62</td><td>86</td><td>85</td><td>110</td></tr>
@@ -40,7 +41,7 @@
 <tr><td id='col1'>316950 Tumiritinga</td><td>35</td><td>47</td><td>10</td><td>24</td><td>4</td><td>2</td><td>49</td><td>73</td></tr>
 <tr><td id='col1'>317150 Mathias Lobato</td><td>22</td><td>38</td><td>12</td><td>7</td><td>9</td><td>4</td><td>43</td><td>49</td></tr>
 <tr><td id='col1'>317190 Virgolândia</td><td>22</td><td>24</td><td>2</td><td>1</td><td>31</td><td>26</td><td>55</td><td>51</td></tr>
-<tr><td id='col1'>Total</td><td>3555</td><td>3755</td><td>428</td><td>595</td><td>518</td><td>609</td><td>4501</td><td>4959</td></tr>
+<tr><td id='col1'>Total</td><td>3567</td><td>3779</td><td>441</td><td>613</td><td>535</td><td>623</td><td>4543</td><td>5015</td></tr>
 
   </table>
 
