--- a/HTML/Micro_31036_Q3_2023.html
+++ b/HTML/Micro_31036_Q3_2023.html
@@ -17,6 +17,7 @@
     <th>05/23-09/23</th><th>09/23-12/23</th><th>05/23-09/23</th><th>09/23-12/23</th><th>05/23-09/23</th><th>09/23-12/23</th><th>05/23-09/23</th><th>09/23-12/23</th>
     </tr>
     <tr><td id='col1'>310180 Alpercata</td><td>63</td><td>37</td><td>18</td><td>13</td><td>10</td><td>8</td><td>91</td><td>58</td></tr>
+<tr><td id='col1'>310220 Alvarenga</td><td>10</td><td>10</td><td>18</td><td>15</td><td>25</td><td>34</td><td>53</td><td>59</td></tr>
 <tr><td id='col1'>311265 Capitão Andrade</td><td>37</td><td>26</td><td>15</td><td>25</td><td>4</td><td>3</td><td>56</td><td>54</td></tr>
 <tr><td id='col1'>311920 Coroaci</td><td>56</td><td>39</td><td>18</td><td>13</td><td>6</td><td>13</td><td>80</td><td>65</td></tr>
 <tr><td id='col1'>312220 Divinolândia De Minas</td><td>29</td><td>22</td><td>1</td><td>0</td><td>105</td><td>66</td><td>135</td><td>88</td></tr>
@@ -40,7 +41,7 @@
 <tr><td id='col1'>316950 Tumiritinga</td><td>47</td><td>39</td><td>10</td><td>11</td><td>6</td><td>3</td><td>63</td><td>53</td></tr>
 <tr><td id='col1'>317150 Mathias Lobato</td><td>29</td><td>14</td><td>5</td><td>8</td><td>4</td><td>5</td><td>38</td><td>27</td></tr>
 <tr><td id='col1'>317190 Virgolândia</td><td>32</td><td>19</td><td>1</td><td>0</td><td>33</td><td>30</td><td>66</td><td>49</td></tr>
-<tr><td id='col1'>Total</td><td>3787</td><td>2933</td><td>563</td><td>579</td><td>495</td><td>528</td><td>4845</td><td>4040</td></tr>
+<tr><td id='col1'>Total</td><td>3797</td><td>2943</td><td>581</td><td>594</td><td>520</td><td>562</td><td>4898</td><td>4099</td></tr>
 
   </table>
 
