--- a/HTML/Micro_31036_Q3_2024.html
+++ b/HTML/Micro_31036_Q3_2024.html
@@ -17,6 +17,7 @@
     <th>05/24-09/24</th><th>09/24-12/24</th><th>05/24-09/24</th><th>09/24-12/24</th><th>05/24-09/24</th><th>09/24-12/24</th><th>05/24-09/24</th><th>09/24-12/24</th>
     </tr>
     <tr><td id='col1'>310180 Alpercata</td><td>42</td><td>46</td><td>23</td><td>20</td><td>12</td><td>12</td><td>77</td><td>78</td></tr>
+<tr><td id='col1'>310220 Alvarenga</td><td>24</td><td>13</td><td>18</td><td>21</td><td>14</td><td>17</td><td>56</td><td>51</td></tr>
 <tr><td id='col1'>311265 Capitão Andrade</td><td>32</td><td>28</td><td>33</td><td>25</td><td>1</td><td>12</td><td>66</td><td>65</td></tr>
 <tr><td id='col1'>311920 Coroaci</td><td>50</td><td>50</td><td>10</td><td>9</td><td>4</td><td>11</td><td>64</td><td>70</td></tr>
 <tr><td id='col1'>312220 Divinolândia De Minas</td><td>24</td><td>29</td><td>0</td><td>0</td><td>86</td><td>93</td><td>110</td><td>122</td></tr>
@@ -40,7 +41,7 @@
 <tr><td id='col1'>316950 Tumiritinga</td><td>47</td><td>19</td><td>24</td><td>18</td><td>2</td><td>6</td><td>73</td><td>43</td></tr>
 <tr><td id='col1'>317150 Mathias Lobato</td><td>38</td><td>20</td><td>7</td><td>8</td><td>4</td><td>8</td><td>49</td><td>36</td></tr>
 <tr><td id='col1'>317190 Virgolândia</td><td>24</td><td>21</td><td>1</td><td>0</td><td>26</td><td>15</td><td>51</td><td>36</td></tr>
-<tr><td id='col1'>Total</td><td>3755</td><td>2968</td><td>595</td><td>526</td><td>609</td><td>563</td><td>4959</td><td>4057</td></tr>
+<tr><td id='col1'>Total</td><td>3779</td><td>2981</td><td>613</td><td>547</td><td>623</td><td>580</td><td>5015</td><td>4108</td></tr>
 
   </table>
 
